// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compact renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-raised"
  >
    <div
      class="rc-raised__bg"
      style="box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(246, 246, 246);"
    />
    <div
      class="rc-raised__content"
    >
      <div
        class="rc-compact compact-picker"
        style="padding-top: 5px; padding-left: 5px; box-sizing: initial; width: 240px;"
      >
        <div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(77, 77, 77);"
                tabindex="0"
                title="#4D4D4D"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(153, 153, 153);"
                tabindex="0"
                title="#999999"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch rc-compact--white"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(255, 255, 255); box-shadow: inset 0 0 0 1px #ddd;"
                tabindex="0"
                title="#FFFFFF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(244, 78, 59);"
                tabindex="0"
                title="#F44E3B"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(254, 146, 0);"
                tabindex="0"
                title="#FE9200"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(252, 220, 0);"
                tabindex="0"
                title="#FCDC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(219, 223, 0);"
                tabindex="0"
                title="#DBDF00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(164, 221, 0);"
                tabindex="0"
                title="#A4DD00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(104, 204, 202);"
                tabindex="0"
                title="#68CCCA"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(115, 216, 255);"
                tabindex="0"
                title="#73D8FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(174, 161, 255);"
                tabindex="0"
                title="#AEA1FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(253, 161, 255);"
                tabindex="0"
                title="#FDA1FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(51, 51, 51);"
                tabindex="0"
                title="#333333"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(128, 128, 128);"
                tabindex="0"
                title="#808080"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(204, 204, 204);"
                tabindex="0"
                title="#cccccc"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(211, 49, 21);"
                tabindex="0"
                title="#D33115"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(226, 115, 0);"
                tabindex="0"
                title="#E27300"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(252, 196, 0);"
                tabindex="0"
                title="#FCC400"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(176, 188, 0);"
                tabindex="0"
                title="#B0BC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(104, 188, 0);"
                tabindex="0"
                title="#68BC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(22, 165, 165);"
                tabindex="0"
                title="#16A5A5"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 156, 224);"
                tabindex="0"
                title="#009CE0"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(123, 100, 255);"
                tabindex="0"
                title="#7B64FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(250, 40, 255);"
                tabindex="0"
                title="#FA28FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 0, 0);"
                tabindex="0"
                title="#000000"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(102, 102, 102);"
                tabindex="0"
                title="#666666"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(179, 179, 179);"
                tabindex="0"
                title="#B3B3B3"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(159, 5, 0);"
                tabindex="0"
                title="#9F0500"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(196, 81, 0);"
                tabindex="0"
                title="#C45100"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(251, 158, 0);"
                tabindex="0"
                title="#FB9E00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(128, 137, 0);"
                tabindex="0"
                title="#808900"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(25, 77, 51);"
                tabindex="0"
                title="#194D33"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(12, 121, 125);"
                tabindex="0"
                title="#0C797D"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 98, 177);"
                tabindex="0"
                title="#0062B1"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(101, 50, 148);"
                tabindex="0"
                title="#653294"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(171, 20, 158);"
                tabindex="0"
                title="#AB149E"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            style="clear: both;"
          />
        </div>
        <div
          class="rc-compact__fields"
        >
          <div
            class="rc-compact__active"
            style="background: rgb(34, 25, 77);"
          />
          <div
            class="rc-compact__field rc-compact--hex"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-1"
                spellcheck="false"
                value="#22194D"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-1"
              >
                hex
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-2"
                spellcheck="false"
                value="34"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-2"
              >
                r
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-3"
                spellcheck="false"
                value="25"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-3"
              >
                g
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-4"
                spellcheck="false"
                value="77"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-4"
              >
                b
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Compact with onSwatchHover renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-raised"
  >
    <div
      class="rc-raised__bg"
      style="box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(246, 246, 246);"
    />
    <div
      class="rc-raised__content"
    >
      <div
        class="rc-compact compact-picker"
        style="padding-top: 5px; padding-left: 5px; box-sizing: initial; width: 240px;"
      >
        <div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(77, 77, 77);"
                tabindex="0"
                title="#4D4D4D"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(153, 153, 153);"
                tabindex="0"
                title="#999999"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch rc-compact--white"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(255, 255, 255); box-shadow: inset 0 0 0 1px #ddd;"
                tabindex="0"
                title="#FFFFFF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(244, 78, 59);"
                tabindex="0"
                title="#F44E3B"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(254, 146, 0);"
                tabindex="0"
                title="#FE9200"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(252, 220, 0);"
                tabindex="0"
                title="#FCDC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(219, 223, 0);"
                tabindex="0"
                title="#DBDF00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(164, 221, 0);"
                tabindex="0"
                title="#A4DD00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(104, 204, 202);"
                tabindex="0"
                title="#68CCCA"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(115, 216, 255);"
                tabindex="0"
                title="#73D8FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(174, 161, 255);"
                tabindex="0"
                title="#AEA1FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(253, 161, 255);"
                tabindex="0"
                title="#FDA1FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(51, 51, 51);"
                tabindex="0"
                title="#333333"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(128, 128, 128);"
                tabindex="0"
                title="#808080"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(204, 204, 204);"
                tabindex="0"
                title="#cccccc"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(211, 49, 21);"
                tabindex="0"
                title="#D33115"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(226, 115, 0);"
                tabindex="0"
                title="#E27300"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(252, 196, 0);"
                tabindex="0"
                title="#FCC400"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(176, 188, 0);"
                tabindex="0"
                title="#B0BC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(104, 188, 0);"
                tabindex="0"
                title="#68BC00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(22, 165, 165);"
                tabindex="0"
                title="#16A5A5"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 156, 224);"
                tabindex="0"
                title="#009CE0"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(123, 100, 255);"
                tabindex="0"
                title="#7B64FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(250, 40, 255);"
                tabindex="0"
                title="#FA28FF"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 0, 0);"
                tabindex="0"
                title="#000000"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(102, 102, 102);"
                tabindex="0"
                title="#666666"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(179, 179, 179);"
                tabindex="0"
                title="#B3B3B3"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(159, 5, 0);"
                tabindex="0"
                title="#9F0500"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(196, 81, 0);"
                tabindex="0"
                title="#C45100"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(251, 158, 0);"
                tabindex="0"
                title="#FB9E00"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(0, 0, 0);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(128, 137, 0);"
                tabindex="0"
                title="#808900"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(25, 77, 51);"
                tabindex="0"
                title="#194D33"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(12, 121, 125);"
                tabindex="0"
                title="#0C797D"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(0, 98, 177);"
                tabindex="0"
                title="#0062B1"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(101, 50, 148);"
                tabindex="0"
                title="#653294"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            class="rc-compact__swatch"
          >
            <span>
              <div
                class="rc-swatch"
                style="background: rgb(171, 20, 158);"
                tabindex="0"
                title="#AB149E"
              >
                <div
                  class="rc-compact__dot"
                  style="background: rgb(255, 255, 255);"
                />
              </div>
            </span>
          </div>
          <div
            style="clear: both;"
          />
        </div>
        <div
          class="rc-compact__fields"
        >
          <div
            class="rc-compact__active"
            style="background: rgb(34, 25, 77);"
          />
          <div
            class="rc-compact__field rc-compact--hex"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-5"
                spellcheck="false"
                value="#22194D"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-5"
              >
                hex
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-6"
                spellcheck="false"
                value="34"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-6"
              >
                r
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-7"
                spellcheck="false"
                value="25"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-7"
              >
                g
              </label>
            </div>
          </div>
          <div
            class="rc-compact__field rc-compact--rgb"
          >
            <div
              class="rc-editable-input"
            >
              <input
                class="rc-editable-input__input"
                id="rc-editable-input-8"
                spellcheck="false"
                value="77"
              />
              <label
                class="rc-editable-input__label"
                for="rc-editable-input-8"
              >
                b
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompactColor renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-compact__swatch"
  >
    <span>
      <div
        class="rc-swatch"
        tabindex="0"
      >
        <div
          class="rc-compact__dot"
          style="background: rgb(255, 255, 255);"
        />
      </div>
    </span>
  </div>
</DocumentFragment>
`;

exports[`CompactFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-compact__fields"
  >
    <div
      class="rc-compact__active"
      style="background: rgb(255, 0, 0);"
    />
    <div
      class="rc-compact__field rc-compact--hex"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-17"
          spellcheck="false"
          value="#FF0000"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-17"
        >
          hex
        </label>
      </div>
    </div>
    <div
      class="rc-compact__field rc-compact--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-18"
          spellcheck="false"
          value="255"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-18"
        >
          r
        </label>
      </div>
    </div>
    <div
      class="rc-compact__field rc-compact--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-19"
          spellcheck="false"
          value="0"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-19"
        >
          g
        </label>
      </div>
    </div>
    <div
      class="rc-compact__field rc-compact--rgb"
    >
      <div
        class="rc-editable-input"
      >
        <input
          class="rc-editable-input__input"
          id="rc-editable-input-20"
          spellcheck="false"
          value="0"
        />
        <label
          class="rc-editable-input__label"
          for="rc-editable-input-20"
        >
          b
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
